style.css
/* Basic styling */

html {
  font-size: 62.5%;
}
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}
body {
  font-family: "Merriweather", serif;
}
.header__logo {
  width: 70px;
  height: 70px;
  z-index: 10;
  top: -10px;
  left: 10px;
  position: relative;
}

header {
  position: fixed;
  top: 0;
  width: 100%;
}
nav {
  padding: 0 15px;
}
a {
  color: white;
  text-decoration: none;
}
.header__menu,
.submenu {
  list-style-type: none;
}

.item {
  padding: 10px;
  font-size: 2rem;
}
.item.button {
  padding: 9px 5px;
}
.item:not(.button) a:hover,
.item a:hover::after {
  color: #ccc;
}
@media all and (min-width: 960px) {
  html {
    font-size: 80%;
  }
}
/* Mobile menu */
.header__menu {
  position: fixed;
  width: 100%;
  top: 0;
  right: 0;
  background-color: rgba(17, 18, 45, 1);
  z-index: 0;
  padding-bottom: 10px;
  padding-top: 10px;
  display: block;
}
.header__tel {
  display: none;
}
.header__menu li a {
  display: block;
  padding: 15px 5px;
}
.header__menu li.subitem a {
  padding: 15px;
}
.toggle {
  order: 1;
  font-size: 20px;
}
.item.button {
  order: 2;
}
.item {
  order: 3;
  width: 100%;
  text-align: center;
  display: none;
}
.active .item {
  display: block;
}
.button.secondary {
  /* divider between buttons and menu links */
  border-bottom: 1px #444 solid;
}
/* humburger */
.menu-icon-wrapper {
  /*   background: red; */
  width: 30px;
  height: 30px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.menu-icon {
  position: absolute;
  width: 30px;
  height: 5px;
  background-color: #fff;
  right: 15px;
}

.menu-icon::before {
  position: absolute;
  left: 0;
  top: -10px;
  content: "";
  width: 30px;
  height: 5px;
  background-color: #fff;
  transition: transform 0.2s ease-in, top 0.2s linear 0.2s;
}

.menu-icon::after {
  position: absolute;
  left: 0;
  top: 10px;
  content: "";
  width: 30px;
  height: 5px;
  background-color: #fff;
  transition: transform 0.2s ease-in, top 0.2s linear 0.2s;
}

.menu-icon.menu-icon-active {
  background-color: transparent;
}

.menu-icon.menu-icon-active::before {
  transform: rotate(45deg);
  top: 0;
  transition: top 0.2s linear, transform 0.2s ease-in 0.2s;
}

.menu-icon.menu-icon-active::after {
  transform: rotate(-45deg);
  top: 0;
  transition: top 0.2s linear, transform 0.2s ease-in 0.2s;
}

/* Desktop menu */
@media all and (min-width: 960px) {
  .header__menu {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    position: static;
    flex-wrap: nowrap;
    background: none;
  }
  .header__logo {
    width: 200px;
    height: 100px;
    z-index: 10;
    top: 0;
    position: relative;
  }
  .logo {
    order: 0;
  }
  .header__menu li a {
    font-size: 1.5rem;
  }
  .header__menu .item a:hover::after {
    content: "";
    display: block;
    border: 1px #fff solid;
    position: relative;
    top: 10px;
  }
  .item {
    order: 1;
    position: relative;
    display: block;
    width: auto;
  }
  .button {
    order: 2;
  }
  .submenu-active .submenu {
    display: block;
    position: absolute;
    left: 0;
    top: 68px;
    background: #111;
  }
  .toggle {
    display: none;
  }
  .submenu-active {
    border-radius: 0;
  }
  .menu-icon-wrapper {
    display: none;
  }
  .warper {
    display: flex;
    justify-content: space-around;
    align-items: center;
  }
  header {
    background-color: rgba(17, 18, 45, 1);
  }
  .header__tel {
    display: block;
    color: #fff;
    font-size: 1.5rem;
  }
}
/* main screen */
.main-screen {
  background-image: url("./img/background1.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  min-height: 50vh;
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
}
.main-screen__title {
  vertical-align: middle;
  color: #fff;
  font-size: 16px;
}
@media all and (min-width: 960px) {
  .main-screen {
    background: linear-gradient(rgba(0, 0, 0, 1), transparent),
      url("./img/background1.jpg");

    background-repeat: no-repeat;
    background-size: cover;
    min-height: 100vh;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
  }
  .main-screen__title {
    vertical-align: middle;
    color: #fff;
    font-size: 6rem;
  }
}
/*main-features */
.main-features {
  display: block;
}
.main-features__title {
  margin: auto;
  display: block;
  width: 100%;
  text-align: center;
  color: #a38b70;
  background-color: rgba(4, 35, 56, 1);
  padding: 1rem 0;
  text-transform: uppercase;
}

.main-features_feature {
  display: flex;
  flex-direction: column;
  padding-left: 7rem;
  margin: 0 auto;
}
.main-features_feature img {
  position: relative;
  left: -6rem;
  top: 5rem;
}
@media all and (min-width: 960px) {
  .main-features {
    display: flex;
    align-items: flex-start;
    padding: 5rem 0;
  }

  .main-features_feature {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: left;
    padding-left: 0rem;
  }
  .main-features__title {
    display: none;
  }

  .main-features_feature img {
    position: static;
  }
  .main-feature__title {
    font-size: 2rem;
  }
  .main-feature__text {
    display: block;
    padding: 0 2rem;
    font-weight: 400;
    font-size: 1.2rem;
  }
}
/* main-service */

.main-service {
  text-align: center;
  color: #a38b70;
  font-weight: bold;
}

.main-service__title {
  margin-top: 2rem;
  background-color: rgba(17, 18, 45, 1);
  padding: 1rem 0;
  text-transform: uppercase;
}
.main-service__item {
  text-align: center;
  border-bottom: 1px #444 solid;
  text-transform: uppercase;
  padding: 1.5rem 0;
}
.main-service__items {
  background-color: rgb(10, 13, 77);
  color: #ccc;
}
.main-service__item img {
  display: none;
}
.main-service__tabs {
  display: flex;
  justify-content: space-between;
  list-style-type: none;
  margin: 0;
  padding: 0;
  background-color: rgba(4, 35, 56, 1);
}
/* ... */

